added tournament structure

--- a/matchmaking/test_client.html
+++ b/matchmaking/test_client.html
@@ -21,6 +21,8 @@
         <button id="confirmBtn" disabled>Confirm Match</button>
         <button id="rejectBtn" disabled>Reject Match</button>
         <button id="exitBtn" disabled>Exit</button>
+        <hr>
+        <button id="connectBtn">Join Tournament</button>
     </div>
     <div id="timer" style="font-weight: bold; color: darkred; margin-top: 10px;"></div>
 
