--- a/matchmaking/tournament.html
+++ b/matchmaking/tournament.html
@@ -16,6 +16,9 @@
         <br>
         <label for="playerMMR">Player MMR:</label>
         <input type="number" id="playerMMR" value="1000">
+        <label for="tournamentId">Tournament ID:</label>
+        <input type="text" id="tournamentId" value="alpha">
+
         <br><br>
         <hr>
         <button id="joinTournamentBtn">Join Tournament</button>
@@ -43,7 +46,8 @@
         const name = document.getElementById('playerName').value;
         const mmr = document.getElementById('playerMMR').value;
 
-        tournamentSocket = new WebSocket(`wss://localhost:3000/tournament?id=${id}&name=${name}&mmr=${mmr}`);
+        const tid = document.getElementById('tournamentId').value;
+        tournamentSocket = new WebSocket(`wss://localhost:3000/tournament?id=${id}&name=${name}&mmr=${mmr}&tid=${tid}`);
 
         tournamentSocket.onopen = () => {
             logTournament(`Connected as ${name}`);
