--- a/tournament.html
+++ b/tournament.html
@@ -63,7 +63,7 @@
                 if (data.opponent) {
                     logTournament(`[Tournament] Match against: ${data.opponent} | Stage: ${data.stage}`);
                 } else {
-                    logTournament(`[Tournament] Waiting for opponent... | Stage: ${data.stage}`);
+                    logTournament(`[Tournament] Searching opponent... | Stage: ${data.stage}`);
                 }
                 document.getElementById('submitResultBtn').disabled = false;
                 document.getElementById('iWonBtn').disabled = false;
